-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 10.0.0
-
1d364880f (10.0), ba3299f0d (10.0)
When one of them is running already, starting the other one fails immediately, but it also breaks running one with a build error:
Error while building/deploying project QtDeclarative (kit: Desktop Qt 6.5.0 GCC 64bit) When executing step "Build"
| For Gerrit Dashboard: QTCREATORBUG-29044 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 472897,2 | ClangTools: Do not abort a running build when starting to analyze | 10.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 472898,2 | ProjectExplorer: Do not treat a starting run control as finished | 10.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |